# chatgpt-on-wechat

./: app.py  pyproject.toml
bot/openai/: open_ai_bot.py
channel/wechat/: wechat_channel.py
