[tool.poetry]
name = "chatgpt-on-wechat"
version = "0.1.0"
description = ""
authors = ["kula <kula@live.com>"]
readme = "README.md"
packages = [{include = "chatgpt_on_wechat"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
